# SnenkBridge

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  build.bat  build.sh  firewall.bat  readme.md
.github/workflows/: build-and-upload-release-artifacts.yml  changelog.yml  ci.yml  create-release-on-tag.yml  draft-release.yml
docs/: configuration.md
docs/formats/: json-config.md  snek-v1.md
service/: Cargo.toml
service/src/: lib.rs  preset.rs  tracking.rs  utils.rs  vbridger.rs  vitamins.rs  vts.rs
service/src/tracking/: client.rs  ifacialmocap.rs  vtubestudio.rs
service/src/vts/: plugin.rs
src/: main.rs
ui/: Cargo.toml  build.rs  embed_resources.rc  sandoitchi_bridge_ui.exe.manifest  snenk_bridge_ui.exe.manifest
ui/presets/: CREDITS.md  default.json  maruseu_enhanced.json  maruseu_vbridger.json  vbridger_compatible.json
ui/src/: app.slint  main.rs
