[package]
name = "snenk_bridge_ui"
version = "0.3.0"
edition = "2021"

[dependencies]
snenk_bridge_service = { path = "../service" }
evalexpr = "11.3.0"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tungstenite = "0.24.0"
slint = "1.12"
rfd = "0.17.2"
dirs = "6"

[build-dependencies]
slint-build = "1.12"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.3"
